# eeg_realtime_pipeline

./: .gitignore  CMakeLists.txt  log  readme
include/: data_packet.hpp  ring_buffer.hpp
src/: consumer.cpp  main.cpp  producer.cpp
